--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Sindre Sorhus
-description: Full-Time Open-Sourcerer & Aspiring Rebel
+title: Ishan Kumar
+description: Computer Arch. and ML enthusiast
 baseurl: ''
-url: https://sindresorhus.com
+url: https://ishankumar.com
 permalink: slug
 collections:
   apps:
